--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,11 +14,11 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
-            android:elevation="5dp"
-            android:clipToPadding="false"
-            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:clipToPadding="false"
+            android:elevation="5dp">
 
             <TextView
                 android:id="@+id/storage_text_view"
@@ -32,8 +33,8 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
                 android:layout_centerInParent="true"
+                android:layout_margin="15dp"
                 android:background="@drawable/circle_shape"
                 android:indeterminate="false"
                 android:max="100"
@@ -41,13 +42,13 @@
                 android:progressDrawable="@drawable/circular_progress_bar" />
 
             <TextView
+                android:id="@+id/tv_inside_progress"
+                style="@style/Base.TextAppearance.AppCompat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="15dp"
-                style="@style/Base.TextAppearance.AppCompat"
-                android:id="@+id/tv_inside_progress"
-                android:text="100"/>
+                android:text="100" />
 
         </android.support.v7.widget.CardView>
 
