--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
+    android:background="#efefef"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +8,8 @@
     tools:context=".DashboardActivity">
 
     <LinearLayout
-        android:padding="7dp"
+        android:padding="10dp"
+        android:layout_margin="5dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -15,50 +17,96 @@
         <android.support.v7.widget.CardView
             android:elevation="5dp"
             android:clipToPadding="false"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/storage_text_view"
-                style="@style/Base.TextAppearance.AppCompat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="Days remaining: " />
+           <LinearLayout
+               android:padding="10dp"
+               android:orientation="horizontal"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent">
 
-            <ProgressBar
-                android:id="@+id/storage_progress_bar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_margin="15dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/circle_shape"
-                android:indeterminate="false"
-                android:max="100"
-                android:progress="75"
-                android:progressDrawable="@drawable/circular_progress_bar" />
+               <RelativeLayout
+                   android:layout_gravity="center_vertical|center_horizontal"
+                   android:gravity="center_horizontal|center_vertical"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="15dp"
-                style="@style/Base.TextAppearance.AppCompat"
-                android:id="@+id/tv_inside_progress"
-                android:text="100"/>
+                   <TextView
+                       android:id="@+id/storage_text_view"
+                       style="@style/Base.TextAppearance.AppCompat"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_alignParentStart="true"
+                       android:text="Days remaining: "
+                       android:textSize="18sp" />
+
+                   <ProgressBar
+                       android:id="@+id/daysRem"
+                       style="?android:attr/progressBarStyleHorizontal"
+                       android:layout_width="95dp"
+                       android:layout_height="95dp"
+                       android:layout_margin="15dp"
+                       android:layout_centerInParent="true"
+                       android:background="@drawable/circle_shape"
+                       android:indeterminate="false"
+                       android:max="100"
+                       android:progress="75"
+                       android:progressDrawable="@drawable/circular_progress_bar" />
+
+                   <TextView
+                       android:id="@+id/noOfDays"
+                       style="@style/Base.TextAppearance.AppCompat"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_centerInParent="true"
+                       android:background="#00000000"
+                       android:text="25"
+                       android:textSize="20sp" />
+
+               </RelativeLayout>
+
+               <LinearLayout
+                   android:layout_gravity="center_vertical|center_horizontal"
+                   android:gravity="center_horizontal|center_vertical"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="20dp"
+                   android:orientation="vertical"
+                   android:padding="20dp">
+
+                   <TextView
+                       style="@style/Base.TextAppearance.AppCompat"
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:layout_marginBottom="10dp"
+                       android:text="Rank: #1"
+                       android:textSize="20sp" />
+
+                   <TextView
+                       style="@style/Base.TextAppearance.AppCompat"
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:text="Points: 50"
+                       android:textSize="20sp" />
+
+               </LinearLayout>
+
+           </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
         <LinearLayout
-            android:clipToPadding="false"
             android:gravity="center"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView
+                android:id="@+id/newProject"
+                android:layout_marginEnd="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
@@ -107,7 +155,7 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_horizontal"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -139,6 +187,105 @@
                         android:textColor="#aeaeae"
                         android:gravity="center"
                         android:text="View Leaderboard here"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.CardView
+                android:layout_marginEnd="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:padding="5dp"
+                        android:layout_weight="0.07"
+                        android:src="@mipmap/ic_launcher_round"
+                        android:layout_width="75dp"
+                        android:layout_height="0dp" />
+
+                    <TextView
+                        android:textStyle="bold"
+                        android:padding="5dp"
+                        android:text="Guide"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#dedede"
+                        android:layout_margin="10dp" />
+
+                    <TextView
+                        android:textStyle="bold"
+                        android:padding="5dp"
+                        android:textColor="#aeaeae"
+                        android:gravity="center"
+                        android:text="You'll get guidance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:padding="5dp"
+                        android:layout_weight="0.07"
+                        android:src="@mipmap/ic_launcher_round"
+                        android:layout_width="75dp"
+                        android:layout_height="0dp" />
+
+                    <TextView
+                        android:textStyle="bold"
+                        android:padding="5dp"
+                        android:text="Help"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#dedede"
+                        android:layout_margin="10dp" />
+
+                    <TextView
+                        android:textStyle="bold"
+                        android:padding="5dp"
+                        android:textColor="#aeaeae"
+                        android:gravity="center"
+                        android:text="More help"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
