--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:gravity="center_horizontal|center_vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,23 +10,16 @@
     tools:context=".SplashScreen">
 
     <TextView
+        android:drawableTop="@mipmap/ic_launcher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/data"
         android:text="@string/app_name"
-        android:textSize="30sp"
+        android:fontFamily="cursive"
+        android:textSize="40sp"
+        android:textColor="#000"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_above="@+id/imageDisplay"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@mipmap/ic_launcher"
-        android:id="@+id/imageDisplay"
-        android:orientation="horizontal"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
