--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -29,6 +29,7 @@
                     android:layout_height="250dp" />
 
                 <TextView
+                    android:id="@+id/msg"
                     android:background="#00000000"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:layout_width="wrap_content"
@@ -54,6 +55,7 @@
                 android:layout_height="wrap_content" />
 
             <android.support.v7.widget.AppCompatButton
+                android:id="@+id/doneButton"
                 android:layout_marginTop="18dp"
                 android:background="@color/colorPrimary"
                 android:textColor="#fff"
