--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -66,13 +66,15 @@
                     android:layout_marginBottom="7dp"
                     android:textColor="@color/colorAccent"
                     android:textSize="25sp"
-                    android:text="@string/About_us"/>
+                    android:text="@string/about"/>
                 <TextView
+                    android:textAlignment="viewStart"
                     android:id="@+id/desc"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
+                    android:fontFamily="sans-serif-condensed"
                     android:text="@string/Desc"/>
             </LinearLayout>
 
