--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -15,6 +15,7 @@
         android:padding="10dp">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/stats"
             app:cardCornerRadius="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
