--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:layout_weight="1"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#efefef"
     tools:context=".DashboardActivity">
 
     <LinearLayout
@@ -20,60 +21,69 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:clipToPadding="false"
             android:elevation="5dp">
 
             <LinearLayout
+                android:weightSum="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:padding="10dp">
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:gravity="center_horizontal|center_vertical">
+                <LinearLayout
+                    android:layout_weight="0.3"
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
 
                     <TextView
+                        android:layout_above="@id/daysRem"
                         android:id="@+id/storage_text_view"
                         style="@style/Base.TextAppearance.AppCompat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
                         android:text="@string/daysRem"
                         android:textSize="18sp" />
 
-                    <ProgressBar
-                        android:id="@+id/daysRem"
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="95dp"
-                        android:layout_height="95dp"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="15dp"
-                        android:background="@drawable/circle_shape"
-                        android:indeterminate="false"
-                        android:max="100"
-                        android:progress="100"
-                        android:progressDrawable="@drawable/circular_progress_bar" />
-
-                    <TextView
-                        android:id="@+id/noOfDays"
-                        style="@style/Base.TextAppearance.AppCompat"
+                    <RelativeLayout
+                        android:layout_marginTop="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:background="#00000000"
-                        android:text="25"
-                        android:textSize="20sp" />
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        android:gravity="center_horizontal|center_vertical">
 
-                </RelativeLayout>
+                        <ProgressBar
+                            android:id="@+id/daysRem"
+                            style="?android:attr/progressBarStyleHorizontal"
+                            android:layout_width="95dp"
+                            android:layout_height="95dp"
+                            android:layout_centerInParent="true"
+                            android:background="@drawable/circle_shape"
+                            android:indeterminate="false"
+                            android:max="100"
+                            android:progress="100"
+                            android:progressDrawable="@drawable/circular_progress_bar" />
+
+                        <TextView
+                            android:id="@+id/noOfDays"
+                            style="@style/Base.TextAppearance.AppCompat"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:background="#00000000"
+                            android:textSize="20sp" />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_margin="20dp"
+                    android:layout_weight="0.7"
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="vertical"
                     android:padding="20dp">
@@ -101,17 +111,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
-                app:cardCornerRadius="8dp"
                 android:id="@+id/newProject"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp">
+                app:cardCornerRadius="8dp"
+                style="@style/CardStyle">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -123,13 +132,14 @@
                         android:layout_width="75dp"
                         android:layout_height="0dp"
                         android:layout_weight="0.07"
-                        android:padding="5dp"
+                        android:padding="10dp"
                         android:src="@mipmap/ic_launcher_round" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="10dp"
+                        android:textSize="18sp"
                         android:text="New Project"
                         android:textStyle="bold" />
 
@@ -148,20 +158,20 @@
                         android:textColor="#aeaeae"
                         android:textStyle="bold" />
 
+
                 </LinearLayout>
 
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/leaderBoard"
                 app:cardCornerRadius="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                style="@style/CardStyle">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
 
@@ -169,13 +179,14 @@
                         android:layout_width="75dp"
                         android:layout_height="0dp"
                         android:layout_weight="0.07"
-                        android:padding="5dp"
+                        android:padding="10dp"
                         android:src="@mipmap/ic_launcher_round" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="10dp"
+                        android:textSize="18sp"
                         android:text="Leaderboard"
                         android:textStyle="bold" />
 
@@ -190,7 +201,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="View Leaderboard here"
+                        android:text="View Leaderboard"
                         android:textColor="#aeaeae"
                         android:textStyle="bold" />
 
@@ -209,10 +220,9 @@
             android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
+                android:id="@+id/help"
                 app:cardCornerRadius="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp">
+                style="@style/CardStyle">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -224,13 +234,14 @@
                         android:layout_width="75dp"
                         android:layout_height="0dp"
                         android:layout_weight="0.07"
-                        android:padding="5dp"
+                        android:padding="10dp"
                         android:src="@mipmap/ic_launcher_round" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="10dp"
+                        android:textSize="18sp"
                         android:text="Guide"
                         android:textStyle="bold" />
 
@@ -255,10 +266,9 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                app:cardCornerRadius="8dp"
                 android:id="@+id/helpCard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                style="@style/CardStyle"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -271,14 +281,15 @@
                         android:layout_width="75dp"
                         android:layout_height="0dp"
                         android:layout_weight="0.07"
-                        android:padding="5dp"
+                        android:padding="10dp"
                         android:src="@mipmap/ic_launcher_round" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="10dp"
                         android:text="Help"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                     <View
