--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -10,64 +10,74 @@
     tools:context=".StatsActivity">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/stats"
         app:cardCornerRadius="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:clipToPadding="false"
-        android:elevation="8dp">
+        android:elevation="5dp">
 
         <LinearLayout
+            android:weightSum="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:padding="10dp">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="center_horizontal|center_vertical">
+            <LinearLayout
+                android:layout_weight="0.3"
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
 
                 <TextView
+                    android:layout_above="@id/daysRem"
                     android:id="@+id/storage_text_view"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
                     android:text="@string/daysRem"
                     android:textSize="18sp" />
 
-                <ProgressBar
-                    android:id="@+id/daysRem"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="95dp"
-                    android:layout_height="95dp"
-                    android:layout_centerInParent="true"
-                    android:layout_margin="15dp"
-                    android:background="@drawable/circle_shape"
-                    android:indeterminate="false"
-                    android:max="100"
-                    android:progress="75"
-                    android:progressDrawable="@drawable/circular_progress_bar" />
-
-                <TextView
-                    android:id="@+id/noOfDays"
-                    style="@style/Base.TextAppearance.AppCompat"
+                <RelativeLayout
+                    android:layout_marginTop="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="#00000000"
-                    android:text="25"
-                    android:textSize="20sp" />
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:gravity="center_horizontal|center_vertical">
 
-            </RelativeLayout>
+                    <ProgressBar
+                        android:id="@+id/daysRem"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="95dp"
+                        android:layout_height="95dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/circle_shape"
+                        android:indeterminate="false"
+                        android:max="100"
+                        android:progress="100"
+                        android:progressDrawable="@drawable/circular_progress_bar" />
+
+                    <TextView
+                        android:id="@+id/noOfDays"
+                        style="@style/Base.TextAppearance.AppCompat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="#00000000"
+                        android:textSize="20sp" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_margin="20dp"
+                android:layout_weight="0.7"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical"
                 android:padding="20dp">
