--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -3,46 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="0dp"
-    android:backgroundTint="@color/cardview_dark_background">
+    android:backgroundTint="@color/cardview_dark_background"
+    android:elevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clipToPadding="false"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:clipToPadding="false">
+        android:padding="10dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:elevation="5dp"
-            android:padding="15dp"
             app:cardCornerRadius="8dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
+
                 <TextView
                     android:id="@+id/tvDisplay"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="15dp"
                     android:text="@string/Your_Coordinator"
                     android:textColor="@color/colorAccent"
                     android:textSize="25sp" />
+
                 <TextView
-                    android:id="@+id/tvContact"
+                    android:id="@+id/tvCoordinator"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="15dp"
                     android:text="From Firebase"
                     android:textSize="22sp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        app:srcCompat="@android:drawable/ic_menu_call" />
+
+                    <TextView
+                        android:id="@+id/tvContact"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20sp"
+                        android:text="123456789" />
+                </LinearLayout>
+                n
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -57,25 +77,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="7dp">
+                android:padding="17dp">
+
                 <TextView
                     android:id="@+id/about"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
+                    android:text="@string/about"
                     android:textColor="@color/colorAccent"
-                    android:textSize="25sp"
-                    android:text="@string/about"/>
+                    android:textSize="25sp" />
+
                 <TextView
-                    android:textAlignment="viewStart"
                     android:id="@+id/desc"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="@string/Desc"/>
+                    android:text="@string/Desc"
+                    android:textAlignment="viewStart"
+                    android:textSize="17sp" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
