--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -41,7 +41,6 @@
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="From Firebase"
                     android:textSize="22sp" />
 
                 <LinearLayout
@@ -50,19 +49,17 @@
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
-                    <android.support.v7.widget.AppCompatImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        app:srcCompat="@android:drawable/ic_menu_call" />
-
                     <TextView
+                        android:drawableStart="@android:drawable/ic_menu_call"
                         android:id="@+id/tvContact"
+                        android:textSize="25sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20sp"
-                        android:text="123456789" />
+                        android:layout_marginStart="5dp" />
+
+
                 </LinearLayout>
-                n
+
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
