--- a/app/src/main/res/layout/project_row.xml
+++ b/app/src/main/res/layout/project_row.xml
@@ -10,6 +10,7 @@
 
     <android.support.v7.widget.CardView
         app:cardCornerRadius="8dp"
+        style="@style/CardStyle"
         android:elevation="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
