--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -91,10 +91,10 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/statsPointsView"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Points: 50"
                     android:textSize="20sp" />
 
             </LinearLayout>
