--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DashboardActivity">
 
@@ -131,11 +131,11 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="75dp"
-                        android:layout_height="0dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.07"
                         android:padding="10dp"
-                        android:src="@mipmap/ic_launcher_round" />
+                        android:src="@drawable/add" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -182,7 +182,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="0.07"
                         android:padding="10dp"
-                        android:src="@mipmap/ic_launcher_round" />
+                        android:src="@drawable/leader_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -237,7 +237,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="0.07"
                         android:padding="10dp"
-                        android:src="@mipmap/ic_launcher_round" />
+                        android:src="@drawable/guide_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -284,7 +284,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="0.07"
                         android:padding="10dp"
-                        android:src="@mipmap/ic_launcher_round" />
+                        android:src="@drawable/help_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
