--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="20dp"
         android:text="@string/app_name"
         style="?android:attr/textAppearanceLarge"
-        android:drawableTop="@mipmap/ic_launcher"
+        android:drawableTop="@drawable/app_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
