--- a/app/src/main/res/layout/project_row.xml
+++ b/app/src/main/res/layout/project_row.xml
@@ -31,23 +31,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#dedede"
+                android:layout_marginBottom="10dp"/>
+
+            <TextView
+                android:id="@+id/textType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:textSize="20sp"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_marginBottom="7sp"
+                android:text="Type: "/>
+
             <TextView
                 android:id="@+id/textCost"
                 android:text="cost"
-                android:textSize="20dp"
+                android:textSize="19dp"
                 android:textColor="#000"
                 android:layout_marginBottom="5dp"
-                style="?android:attr/textAppearanceLarge"
+                style="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textDesc"
                 android:text="desc"
-                android:textSize="20dp"
+                android:textSize="19dp"
                 android:textColor="#000"
                 android:layout_marginBottom="5dp"
-                style="?android:attr/textAppearanceLarge"
+                style="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
