--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:icon="@mipmap/ic_launcher_round"
+        android:tooltipText="Change Language"
         android:id="@+id/lang"
         app:showAsAction="always"
-        android:title="@string/language" />
+        android:title="@string/English"/>
 
     <item
         android:title="@string/about"
