--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -12,20 +12,21 @@
     <android.support.v7.widget.CardView
         android:id="@+id/stats"
         app:cardCornerRadius="8dp"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:elevation="5dp">
 
         <LinearLayout
-            android:weightSum="1"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="10dp">
 
             <LinearLayout
-                android:layout_weight="0.3"
+                android:layout_weight="0.5"
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
@@ -75,22 +76,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_margin="20dp"
-                android:layout_weight="0.7"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="20dp"
+                android:layout_weight="0.5"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical"
                 android:padding="20dp">
 
                 <TextView
+                    android:id="@+id/statsNameView"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="10dp"
-                    android:text="Rank: #1"
+                    android:textSize="25sp" />
+
+                <TextView
+                    android:text="@string/rank"
+                    android:id="@+id/statsRankView"
+                    style="@style/Base.TextAppearance.AppCompat"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp"
                     android:textSize="20sp" />
 
                 <TextView
+                    android:text="@string/points"
                     android:id="@+id/statsPointsView"
                     style="@style/Base.TextAppearance.AppCompat"
                     android:layout_width="match_parent"
