--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -18,15 +18,15 @@ android:layout_height="match_parent"
         <android.support.v7.widget.CardView
             android:id="@+id/stats"
             app:cardCornerRadius="8dp"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:elevation="5dp">
 
             <LinearLayout
-                android:weightSum="1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="10dp">
 
@@ -34,10 +34,9 @@ android:layout_height="match_parent"
                     android:layout_weight="0.3"
                     android:orientation="vertical"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <TextView
-                        android:layout_above="@id/daysRem"
                         android:id="@+id/storage_text_view"
                         style="@style/Base.TextAppearance.AppCompat"
                         android:layout_width="wrap_content"
@@ -49,8 +48,8 @@ android:layout_height="match_parent"
                         android:layout_marginTop="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:gravity="center_horizontal|center_vertical">
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center_horizontal">
 
                         <ProgressBar
                             android:id="@+id/daysRem"
@@ -81,12 +80,20 @@ android:layout_height="match_parent"
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:layout_margin="20dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="20dp"
                     android:layout_weight="0.7"
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="vertical"
                     android:padding="20dp">
+
+                    <TextView
+                        android:id="@+id/nameView"
+                        style="@style/Base.TextAppearance.AppCompat"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:textSize="25sp" />
 
                     <TextView
                         android:id="@+id/rankView"
@@ -94,6 +101,7 @@ android:layout_height="match_parent"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="10dp"
+                        android:text="@string/rank"
                         android:textSize="20sp" />
 
                     <TextView
@@ -101,6 +109,7 @@ android:layout_height="match_parent"
                         style="@style/Base.TextAppearance.AppCompat"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:text="@string/points"
                         android:textSize="20sp" />
 
                 </LinearLayout>
@@ -132,7 +141,7 @@ android:layout_height="match_parent"
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="0.07"
                         android:padding="10dp"
                         android:src="@drawable/add" />
@@ -142,7 +151,7 @@ android:layout_height="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
                         android:textSize="18sp"
-                        android:text="New Project"
+                        android:text="@string/newProject"
                         android:textStyle="bold" />
 
                     <View
@@ -156,7 +165,7 @@ android:layout_height="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Add new project here"
+                        android:text="@string/npd"
                         android:textColor="#aeaeae"
                         android:textStyle="bold" />
 
@@ -189,7 +198,7 @@ android:layout_height="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
                         android:textSize="18sp"
-                        android:text="Leaderboard"
+                        android:text="@string/leader"
                         android:textStyle="bold" />
 
                     <View
@@ -203,7 +212,7 @@ android:layout_height="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="View Leaderboard"
+                        android:text="@string/vls"
                         android:textColor="#aeaeae"
                         android:textStyle="bold" />
 
@@ -244,7 +253,7 @@ android:layout_height="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
                         android:textSize="18sp"
-                        android:text="Guide"
+                        android:text="@string/guide"
                         android:textStyle="bold" />
 
                     <View
@@ -258,7 +267,7 @@ android:layout_height="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="You'll get guidance"
+                        android:text="@string/gs"
                         android:textColor="#aeaeae"
                         android:textStyle="bold" />
 
@@ -290,7 +299,7 @@ android:layout_height="match_parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Help"
+                        android:text="@string/Help"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -305,7 +314,7 @@ android:layout_height="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="More help"
+                        android:text="@string/helpE"
                         android:textColor="#aeaeae"
                         android:textStyle="bold" />
 
