--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:tooltipText="Change Language"
-        android:id="@+id/lang"
-        app:showAsAction="always"
-        android:title="@string/English"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:title="@string/about"
         android:id="@+id/about" />
-
-    <item
-        android:title="@string/feedback"
-        android:id="@+id/feedback" />
 
     <item
         android:title="@string/logout"
