--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:inputType="textEmailAddress"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:hint="@string/sign_in_with_email"
+            android:hint="@string/signIn"
             android:padding="15dp"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -53,7 +53,7 @@
             android:inputType="textPassword"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:hint="@string/password_hint"
+            android:hint="@string/pass"
             android:padding="15dp"/>
     </android.support.design.widget.TextInputLayout>
 
